# croppedtravelleralex-auto-open-browser

./: .gitignore  AI.md  CAPABILITIES.md  CURRENT_DIRECTION.md  CURRENT_TASK.md  Cargo.toml  DESIGN_NETWORK_IDENTITY.md  EXECUTION_LOG.md  EXECUTION_PROTOCOL.md  EXECUTION_STATE_MACHINE.md  FINGERPRINT_BOUNDARY.md  GOLDEN_FEATURES.md  LIGHTPANDA_V1_PLAN.md  LONG_TERM_ROADMAP.md  MODULE_SCOPE.md  PLAN.md  PROGRESS.md  QUEUE_CLAIM_PLAN.md  README.md  ROADMAP.md  ROUND_SCHEDULER.md  RUNNING_CANCEL_PLAN.md  RUN_STATE.json  STATUS.md  TODO.md  VISION.md  findings.md  progress.md  task_plan.md
.cloudflared/: agent-alexstudio-token
docs/: 01-project-charter.md  02-current-state.md  03-roadmap.md  04-improvement-backlog.md  05-ai-maintenance-playbook.md  README.md  api-ops.md  architecture.md  control-plane-and-visibility-mainline.md  current-stage-control-summary.md  deferred-work-freeze-list.md  deferred-work-freeze-summary.md  dual-entry-snapshot-maintenance-example.md  entry-summary-update-checklist.md  entry-summary-update-example.md  explain-version-visibility-readability-check.md  explainability-wording-next-step.md  final-goal-progress-breakdown.md  fingerprint-first-development-rules.md  lightpanda-api-task-structure.md  next-mainline-after-refresh-scope-closure.md  perf-probe-real-flow-sample-2026-04-02.md  perf-probe-sample-2026-04-02.md  profiling-summary-2026-04-02.md  progress.md  provider-refresh-narrowing-plan.md  provider-region-entry-conditions.md  provider-region-entry-validation-sample-round-3.md  provider-region-entry-validation-sample.md  (+17 more)
src/: config.rs  (+4 more)
(+156 files in other folders)
